# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-client-2.1.17-r2 (19 May 2010)

  19 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-2.1.17-r1.ebuild, +calculate-client-2.1.17-r2.ebuild,
  +files/calculate-client-2.1.17-r1.patch,
  +files/calculate-client-2.1.17-r2.patch,
  -files/calculate-client-2.1.17.patch:
  Add patch for the correct profile synchronization

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-9999.ebuild:
  Fix git path.

*calculate-client-2.1.17-r1 (04 May 2010)

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.17.ebuild, +calculate-client-2.1.17-r1.ebuild,
  +files/calculate-client-2.1.17.patch:
  Add patch for bugfix #153.

*calculate-client-2.1.17 (20 Apr 2010)

  20 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.16.ebuild, +calculate-client-2.1.17.ebuild:
  Bump version. Remove previous.

*calculate-client-2.1.16 (16 Apr 2010)

  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.15.ebuild, +calculate-client-2.1.16.ebuild:
  Bump version. Remove previous.

  10 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.4-r1.ebuild, -calculate-client-2.1.6.ebuild,
  -calculate-client-2.1.7.ebuild, -calculate-client-2.1.7-r1.ebuild,
  -files/calculate-client-2.1.7-r1.patch, -calculate-client-2.1.8.ebuild,
  -calculate-client-2.1.9.ebuild, -calculate-client-2.1.10.ebuild:
  Removed Calculate client which has version less 2.1.11.

*calculate-client-2.1.15 (08 Apr 2010)

  08 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-client-2.1.14.ebuild, +calculate-client-2.1.15.ebuild:
  Bump version. Remove previous.

*calculate-client-2.1.14 (07 Apr 2010)

  07 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>