@@ -2,9 +2,11 @@ AUX calculate-client-2.1.17-r1.patch 1735 RMD160 3492a7c6b2637e176872dd18f38390b
 AUX calculate-client-2.1.17-r2.patch 3716 RMD160 bc5d39cff353c4dd00344c04fcf65336d560f687 SHA1 524aeb6b686359f470874b78f99fcc4029348329 SHA256 a88fd06c53b67072fdea891891b9da3df81021ada576edfca89d83283517baa6
 DIST calculate-client-2.1.11.tar.bz2 76735 RMD160 a31fff0135103bd32aee1c903eeae2b059e31c0b SHA1 1a1f05ab8bcc0aeb04bbf10371bec9aaad09cf18 SHA256 3f3410b697e9ebf4965bf0886b3ad8c40815c2ee464fdaaa90e220fb5b51f723
 DIST calculate-client-2.1.17.tar.bz2 91859 RMD160 376702b4535debc328276cbbd3bb5006a2dfff89 SHA1 9b3d5a5992d96b0104c17f062fcc62f671baf1d5 SHA256 f17c948f852a6d69736f7080a74d203c5720a12517f65265868d8b40ef9d83a8
+DIST calculate-client-2.1.18.tar.bz2 180377 RMD160 70355a6092715c46e57a68bdd10592ac8e2a3ba7 SHA1 5f754d7d707e57d83b121370026c62c75f5b0615 SHA256 4f1c05128c4b2aac6b93857c3c466ecbed0236146b53caed2916bccab437806a
 EBUILD calculate-client-2.1.11.ebuild 1666 RMD160 1b9daee165695618b7404e51e58436b04310f744 SHA1 63b0908f95087157bd20f340b9c85aea13f46adf SHA256 a1c36d830d38872afaa8c2d691af7a9453008d2448a4f8dda5000e2880b2f57c
 EBUILD calculate-client-2.1.17-r1.ebuild 1809 RMD160 9b2e60c8b48807d86273fc9b78b1c8db4c79cea5 SHA1 4862fd10526862f7baa047d790f117787dcedc9a SHA256 b53f9a16678d4be95a23afef2cf0997f6567b38e936ec9590e3feeda66df45fc
 EBUILD calculate-client-2.1.17-r2.ebuild 1896 RMD160 01fb62dab724750b7514cb57353214a2d4f75337 SHA1 a43f4873532be1ca1edae47828fc22b0f164b88c SHA256 3da7be8962541bb447e667de5e3e2c67f06beda528b3282af4741a97265f6312
+EBUILD calculate-client-2.1.18.ebuild 1695 RMD160 91c6a5f07302640ad649824ed10d6495a724df58 SHA1 6e7c10b192a02f0daeb705d93585cd5db9fbff0d SHA256 ebc7776a3c62d3d37c6d36e02d78b1ceffea826229a213047371a6fde645f84f
 EBUILD calculate-client-9999.ebuild 1640 RMD160 5d0dc794ef81d27de840059d84425d87d4d5c638 SHA1 5e1e90ac0c7d5ce26ff848212b28a0895ff901f3 SHA256 3484b1c3d6d5be7aef070468b07947be1ebcac829eeb1daf6041978e411757c3
-MISC ChangeLog 3280 RMD160 0530a10aed4216f99cb64d1034103f534374d07a SHA1 3b3ce4e5a26994d393fa621cef5863e6893fe9d8 SHA256 c8cc9e07461d31f6a3115fdd7f3540422a4410e6e86ecb28df6796d377631a1a
+MISC ChangeLog 3465 RMD160 694a80d31a3ed79626d6ffa225574266fd76f9bc SHA1 f500d9a34dfc447249ff51cf84b25df26931c2ae SHA256 f902d896c32c6b702b01302255ff8f3d7c66b6c0f83cc342bafd58cd17b7c24c
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
