@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-client-2.1.18 (28 May 2010)
+
+  28 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-client-2.1.18.ebuild:
+  Bump version. Calculate-2.1.18 bugfix release.
+
 *calculate-client-2.1.17-r2 (19 May 2010)
 
   19 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
